cmake_minimum_required(VERSION 3.16)
project(StockMarketSim)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(SOURCE_DIR "${CMAKE_SOURCE_DIR}/src")
set(RESOURCES_DIR "${CMAKE_SOURCE_DIR}/resources")

set(CMAKE_AUTOMOC ON)
file(GLOB_RECURSE SOURCE_FILES "${SOURCE_DIR}/*.cpp")
file(GLOB_RECURSE JSON_SOURCES "${RESOURCES_DIR}/*.json")

add_executable(${PROJECT_NAME} ${SOURCE_FILES})
