cmake_minimum_required(VERSION 3.16)
project(StockMarketSim)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(SOURCE_DIR "${CMAKE_SOURCE_DIR}/src")
file(GLOB_RECURSE SOURCE_FILES "${SOURCE_DIR}/*.cpp")
set(MAIN_FILE "${CMAKE_SOURCE_DIR}/main.cpp")
list(APPEND SOURCE_FILES "${MAIN_FILE}")

add_executable(${PROJECT_NAME} ${SOURCE_FILES})